升级至 java 11，各依赖关系、兼容性、过时api改写